--- a/a2ui-demo/samples/agent/adk/pyproject.toml
+++ b/a2ui-demo/samples/agent/adk/pyproject.toml
@@ -3,7 +3,7 @@ url = "https://pypi.org/simple"
 default = true
 
 [tool.uv.workspace]
-members = ["contact_lookup", "contact_multiple_surfaces", "orchestrator", "restaurant_finder", "rizzcharts"]
+members = ["contact_lookup", "contact_multiple_surfaces", "orchestrator", "restaurant_finder", "rizzcharts", "simple_chat"]
 
 [tool.uv.sources]
 a2ui-agent = { path = "../../../a2a_agents/python/a2ui_agent", editable = true }
